--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,30 +1,30 @@
 <%= form_for(@event) do |f| %>
-    <div class="field">
-        <%= f.label :time, class: "required-field" %><br />
-        <%= f.date_select :time %>
-    </div>
+  <div>
+    <%= f.label :time, class: "block font-bold" %>
+    <%= f.date_select :time %>
+  </div>
 
-    <div class="field">
-        <%= f.label :place, class: "required-field" %><br />
-        <%= f.text_field :place %>
-    </div>
+  <div class="mt-6">
+    <%= f.label :place, class: "block font-bold" %>
+    <%= f.text_field :place %>
+  </div>
 
-    <div class="field">
-        <%= f.label :agenda, class: "required-field" %><br />
-        <%= f.text_area :agenda %>
-    </div>
+  <div class="mt-6">
+    <%= f.label :agenda, class: "block font-bold" %>
+    <%= f.text_area :agenda %>
+  </div>
 
-    <div class="field">
-        <%= f.label :participants, class: "required-field" %><br />
-        <%= f.text_area :participants %>
-    </div>
-    #confluence_link
-    <div class="field">
-        <%= f.label :demo_links, class: "required-field" %><br />
-        <%= f.text_area :demo_links %>
-    </div>
-    
-  <div class="actions">
-    <%= f.submit class: "button" %>
+  <div class="mt-6">
+    <%= f.label :participants, class: "block font-bold" %>
+    <%= f.text_area :participants %>
+  </div>
+
+  <div class="mt-6">
+    <%= f.label :demo_links, class: "block font-bold" %>
+    <%= f.text_area :demo_links %>
+  </div>
+
+  <div class="mt-4 mb-8">
+    <%= f.submit class: "inline-block px-5 py-3 text-base font-medium rounded-md text-white bg-ezgreen hover:bg-ezgreen-dark" %>
   </div>
 <% end %>
