--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,3 +1,3 @@
-<h1> Submit an Event </h1>
+<% content_for(:title) { "Create an Event" } %>
 
-<%= render :partial => '/events/form' %>
+<%= render partial: "/events/form" %>
