--- a/app/views/ideas/new.html.erb
+++ b/app/views/ideas/new.html.erb
@@ -1,2 +1,3 @@
-<h1> Submit an Idea </h1>
-<%= render :partial => '/ideas/form' %>
+<% content_for(:title) { "Submit an Idea" } %>
+
+<%= render partial: "/ideas/form" %>
