--- a/app/views/votes/new.html.erb
+++ b/app/views/votes/new.html.erb
@@ -31,7 +31,7 @@
 
   <hr/>
 
-  <% if @event.voting_enabled? %>
+  <% if @event.voting_started? %>
     <p>To start voting, first enter a username.</p>
     <%= form_with(url: new_event_vote_path(@event), method: :get, local: true) do |f| %>
       <%= f.hidden_field :award_id, value: @state.next_award.id %>
