updates form text and specs

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -16,7 +16,7 @@
   </div>
 
   <div class="mt-8">
-    <%= f.label "Add any links to your final artifacts", class: "block font-bold" %>
+    <%= f.label "Add a link to your final artifact", class: "block font-bold" %>
     <%= f.text_field :links, value: @project.links %>
   </div>
 
