Fix typo in css class

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -121,7 +121,7 @@ body {
     color: #28a745;
  }
 
- .flash_messages .info {
+ .flash_messages .notice {
     border-color: #17a2b8;
     color: #17a2b8;
  }
