Enable editing voting_status and link to voting

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -24,6 +24,21 @@
     <%= f.text_area :demo_links %>
   </div>
 
+  <div class="mt-6">
+    <%= f.label :participants, class: "block font-bold" %>
+    <%= f.text_area :participants %>
+  </div>
+
+  <div class="mt-6">
+    <%= f.label :demo_links, class: "block font-bold" %>
+    <%= f.text_area :demo_links %>
+  </div>
+
+  <div class="mt-6">
+    <%= f.label :voting_status, class: "block font-bold" %><br />
+    <%= f.select :voting_status, voting_status_options(@event), {}, class: "full-width" %>
+  </div>
+
   <div class="mt-4 mb-8">
     <%= f.submit class: "inline-block px-5 py-3 text-base font-medium rounded-md text-white bg-ezgreen hover:bg-ezgreen-dark" %>
   </div>
