--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -125,3 +125,8 @@ body {
     border-color: #17a2b8;
     color: #17a2b8;
  }
+
+ input[type=radio] {
+    width: auto;
+    margin-right: 10px;
+ }
