--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,8 +1,13 @@
 <p><%= link_to "Back to Event", event_path %></p>
-<h1> <%=@project.idea.name%> </h1>
+<h1> <%=@project.name%> </h1>
 <h3> <%=@project.idea.tagline%> </h3>
 Submitted by: <%= @project.idea.submitter %>
 
+<div class="project-artifact">
+  <% if @project.links.present? %>
+    <a href="<%=@project.links%>">Project Artifact</a>
+  <% end %>
+</div>
 <h4>Description:</h4>
 <%= @project.idea.description%>
 
@@ -20,4 +25,7 @@ Submitted by: <%= @project.idea.submitter %>
 
 <h4>How many "people hours" do you estimate it will take to plan, scope and demo?</h4>
 <%= @project.idea.hours_estimate%>
+
+<h4>Additional Comments:</h4>
+<%= @project.additional_comments %>
 <%= button_to "Edit", edit_event_project_path, :method => "get", class:"button" %>
