--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,4 @@
-<p><%= link_to "Back to Event", event_path %></p>
+<p><%= link_to "Back to Event", event_path(@project.event) %></p>
 <h1> <%=@project.name%> </h1>
 <h3> <%=@project.idea.tagline%> </h3>
 Submitted by: <%= @project.idea.submitter %>
