artifact links open in new tab

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -29,7 +29,7 @@
       </p>
 
       <% if project.links.present? %>
-        <p><a href="<%=project.links%>">Project Artifact</a></p>
+        <p><a href="<%=project.links%>" target="_blank" class="text-ezgreen hover:underline">Project Artifact</a></p>
       <% end %>
     </div>
   <% end %>
