--- a/app/views/application/_flash_messages.html.erb
+++ b/app/views/application/_flash_messages.html.erb
@@ -1,9 +1,9 @@
-<div class="flash_messages">
-
+<div class="relative max-w-screen-lg mx-auto mb-10">
   <% if flash[:errors].present? %>
-    <div class="errors">
-      <h5>Please fix the following errors:</h5>
-      <ul>
+    <div class="bg-red-100 p-6 rounded">
+      <h5 class="mb-2 font-bold">Please fix the following errors:</h5>
+
+      <ul class="list-disc ml-6">
         <% flash[:errors].each do |error| %>
           <li class="error"><%= error %></li>
         <% end %>
@@ -12,10 +12,10 @@
   <% end %>
 
   <% if flash[:success].present? %>
-    <div class="success"><%= flash[:success] %></div>
+    <div class="bg-green-100 p-6 rounded"><%= flash[:success] %></div>
   <% end %>
 
   <% if flash[:notice].present? %>
-    <div class="notice"><%= flash[:notice] %></div>
+    <div class="bg-blue-100 p-6 rounded"><%= flash[:notice] %></div>
   <% end %>
 </div>
