--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -35,5 +35,5 @@
 <p><%= @project.additional_comments.presence || "None." %></p>
 
 <div class="my-8">
-  <%= link_to "Edit", edit_event_project_path(@project), class: "inline-block px-5 py-3 text-base font-medium rounded-md text-white bg-ezgreen hover:bg-ezgreen-dark" %>
+  <%= link_to "Edit", edit_event_project_path(@project.event, @project), class: "inline-block px-5 py-3 text-base font-medium rounded-md text-white bg-ezgreen hover:bg-ezgreen-dark" %>
 </p>
