--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -20,38 +20,47 @@
   <p class="mt-4">
     Voting has not yet started. However, you can get a sneaky preview of the
     awards you'll be voting on
-    <a href="<%= new_event_vote_path(@event)%>">here</a>.
+    <a href="<%= new_event_vote_path(@event)%>" class="text-ezgreen hover:underline">
+      here.
+    </a>
   </p>
 
 <% elsif @event.voting_started? %>
-  <p class="mt-4">
-    Voting is open! Cast your vote
-    <a href="<%= new_event_vote_path(@event)%>">here</a>.
+  <p class="mt-4 mb-4">
+    Voting is open!
   </p>
+  <a href="<%= new_event_vote_path(@event)%>" class="inline-block px-5 py-3 font-medium rounded-md text-white bg-ezgreen hover:bg-ezgreen-dark">
+    Cast your vote
+  </a>
 
 <% else @event.voting_started? %>
   <p class="mt-4">
     Voting has now finished for this event. You can still have a look at the
     awards and projects
-    <a href="<%= new_event_vote_path(@event)%>">here</a>.
+    <a href="<%= new_event_vote_path(@event)%>" class="text-ezgreen hover:underline">
+      here.
+    </a>
   </p>
 <% end %>
 
 <div>
   <h3 class="mt-8 text-3xl font-bold">Projects</h3>
-  <div class="mt-4">
-    <h4 class="text-2xl font-semibold">
-      <%= link_to "#{project.idea.name}: #{project.idea.tagline}", event_project_path(@event, project), class: "text-ezgreen hover:underline" %>
-    </h4>
 
-    <p>
-      <%= project.idea.description %>
-    </p>
+  <% @event.projects.each do |project|%>
+    <div class="mt-4">
+      <h4 class="text-2xl font-semibold">
+        <%= link_to "#{project.idea.name}: #{project.idea.tagline}", event_project_path(@event, project), class: "text-ezgreen hover:underline" %>
+      </h4>
 
-    <% if project.links.present? %>
-      <p><a href="<%=project.links%>" target="_blank">Project Artifact</a></p>
-    <% end %>
-  </div>
+      <p>
+        <%= project.idea.description %>
+      </p>
+
+      <% if project.links.present? %>
+        <p><a href="<%=project.links%>" target="_blank" class="text-ezgreen hover:underline">Project Artifact</a></p>
+      <% end %>
+    </div>
+  <% end %>
 </div>
 
 <div class="my-8">
