Fix link styling

--- a/app/views/votes/_voting_overview.html.erb
+++ b/app/views/votes/_voting_overview.html.erb
@@ -14,7 +14,9 @@
       <%= project.idea.name %>
 
       <% if project.links.present? %>
-        (<a href="<%= project.links %>" target="_blank">project artifact</a>)
+        <a href="<%= project.links %>" target="_blank" class="text-ezgreen hover:underline">
+          (project artifact)
+        </a>
       <% end %>
     </li>
   <% end %>
