Fix the title case.

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:title) { "Edit Project" } %>
 
 <h2 class="text-center">
-  <%= @project.idea.name %> for the <%= format_date(@event.time) %> EzHackathon
+  <%= @project.idea.name %> for the <%= format_date(@event.time) %> ezHackathon
 </h2>
 
 <%= render partial: "/projects/form" %>
