--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,2 +1,2 @@
-<h2>Submit a New Project for the <%= @event.time.strftime("%B %d, %Y")%> EzHackathon</h2>
+<h2>Submit a New Project for the <%= @event.time.strftime("%B %d, %Y")%> ezHackathon</h2>
 <%= render :partial => '/projects/form' %>
