--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta http-equiv="refresh" content="<%= @refresh_interval %>">
   <% end %>
 
-  <title>Ezhackathon<%= content_for?(:title) ? " - #{yield(:title)}" : nil %></title>
+  <title>ezHackathons<%= content_for?(:title) ? " - #{yield(:title)}" : nil %></title>
 
   <%= stylesheet_link_tag "inter-font", "data-turbo-track": "reload" %>
   <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload" %>
@@ -26,7 +26,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
         </svg>
 
-        <h1 class="text-3xl tracking-tight text-gray-900 font-semibold self-center">EzHackathons</h1>
+        <h1 class="text-3xl tracking-tight text-gray-900 font-semibold self-center">ezHackathons</h1>
       </a>
 
       <div class="flex space-x-6 sm:space-x-10">
