--- a/app/views/votes/_voting.html.erb
+++ b/app/views/votes/_voting.html.erb
@@ -14,7 +14,7 @@
       state.shuffled_projects,
       :id,
       :name,
-      {},
+      { checked: state.existing_vote&.project_id },
       required: true
     ) do |b| %>
       <div class="w-6/12 mx-auto text-left">
